--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "express": "*",
     "body-parser": "*",
     "mongoose": "*",
-    "jwt-simple" : "*"
+    "jwt-simple" : "*",
+    "formidable" : "*"
   }
 }
